@@ -1,4 +1,14 @@
-DIST frozen-bubble-2.2.1-beta1.tar.bz2 22424798 RMD160 1b7f6204c302a1f1b98ce19bb1ffaf309d8e0837 SHA1 f3d320e701afbab36c48524fe00d331aaab0257f SHA256 c5be403ccb71543dab1aeb7d5ae311e18693f79937fb9159469cdad0abf18ac4
-EBUILD frozen-bubble-2.2.1_beta1.ebuild 1851 RMD160 268a6d93e872900d579662ed2dfe9b6f2f74ff81 SHA1 e042b44d62e81df8817be81e34824cb79164b3ca SHA256 a4fdb6f8efc33c5097734b3df85c130c7155c4064a7f6b6239c4bf46c300ca45
-MISC ChangeLog 10037 RMD160 fc7ae15831d521317457e84d41d33e7b07fa8c59 SHA1 34807732802b3c8f197815af4105bf93aff6af8a SHA256 5e030a753ae7bfa21456f4ffe182cdb9a7adeb796276e033dbdc550a155eb390
-MISC metadata.xml 449 RMD160 b8f34def5d742659506da917a43d62bc670167af SHA1 a13893053f32b670f7ed6c49d666cb9631f49c11 SHA256 63337ec457363a86ff999264ec10ee614f5156160a57371d278122c167470602
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST frozen-bubble-2.2.1-beta1.tar.bz2 22424798 SHA256 c5be403ccb71543dab1aeb7d5ae311e18693f79937fb9159469cdad0abf18ac4 SHA512 a5d1432195bc41b2823678986fe71223acf5c740636a871758e6337072c74a84bca7aa7088af7b299586e4e261521ae0b3341805692ab684d93e85f52174b1ac WHIRLPOOL 7b2782c8fe4a1dc8e77d5eba0d3e1cae12435e82d2c623ca0de6d5c91822bf07855a6f643b9f711eccba7232e7c80872add3296ee1915da518a154340fcd92dc
+EBUILD frozen-bubble-2.2.1_beta1.ebuild 1897 SHA256 c0137562b20baa89551498a4e356ea5a3f033f645cf09bb21890fdd5cb047d0a SHA512 648277be9131ba9bb43b757fa8389fa06f3193e505831cd53b1029385a80fe3468f9a4e3f002a98e21704ba11f7628dbf7e6f4961c17c8d0443dd2e158d80cdb WHIRLPOOL ebd870e89131d44f34d2e567b2919e85e43d902130bf18e8b518a8293fd3cb4ed231c173b763ede2926ce9062c503660d3500f6f12711b2bc3c24e2a75a08ca1
+MISC ChangeLog 10185 SHA256 dcfc8e7fa5970eb313f937deb06fda0b3825848fc9ce1e0007d173b811fbed1c SHA512 ee364d6ea539c5d78c4f76b0d8264c3790bfe6e10c009f29261e5a2a07970db2c3286e4fb72b9e3fab6e504ead6196dab8db48e0a539831055311d272a26af54 WHIRLPOOL f881cc3aab75da0b4bd4d6c521ebd34bea00103862f04c3e15871b8d233ff3d26d7822adf2f890481fa1d88cc8eec11c54f223f52b6c2934a0f9fa951c216cc5
+MISC metadata.xml 449 SHA256 63337ec457363a86ff999264ec10ee614f5156160a57371d278122c167470602 SHA512 146fa26744a06831370e3633597cf3921a09828266469fd8aee04552160bfbd6fb1272a49c008ce3fb55006a747b503213728adc6c5e1d85a1405bbcce998ac8 WHIRLPOOL 18a05a1b222cc3aff82d830dbf8e87ef8b41edf4bcea94b66b0538aad29a0015fcb6efb882d7d1c07bf1af5208e9d28366910525c8ace3641a9d748415496170
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlBcaUEACgkQIY77eQFFFC1yQQCgqcqsScxqRaM/8h7ylqRNZN3l
+/5sAnAorYuZJ563X3+H+ktg1xtfT6AMl
+=qbzi
+-----END PGP SIGNATURE-----
