@@ -25,23 +25,13 @@ DIST cups-1.6.1-source.tar.bz2 8218340 SHA256 5842ab1144e653160fe667ee78b932ee03
 EBUILD cups-1.5.2-r4.ebuild 8421 SHA256 ce3c4b59de12421bef0918ac4f6c47b7b3dccca820f29c92311ee738e34415c0 SHA512 c142b72652c27ccc8fca9653f9c4c34d971cc94d6cabb3ef54c46d126b5b03d0a627f2a4461637c443ec5fe52619f66f93f493af80a87b7d5eb8bb7a129e40c2 WHIRLPOOL 91cfdcc8499d4dc539f1fc60743eafc1cb3842032c6cbf394963e980b73e698d902df972b716433781782f1558cbaa9005345ebe382a6fdd55509e65df0a42de
 EBUILD cups-1.5.3.ebuild 8683 SHA256 93862c6bf66eb1003dbfef73cd1e199be45cfad8fcd5e1b36a6bc298e6fb3e6c SHA512 b44d3d5cdc343fe3686b6b0accc48ac44db76fc0d8b3562aa47b1a018cec1a8e9ae46cf7b0b1b1f47df4ff3bb9d35dbc1831cb5e4e94f620ecfcea3ae181318a WHIRLPOOL f39c84f449084790e1382283851a4a750dc01c0929fe0a20b6dca9a8635289bcefb3686c6d6de3b8453e2f718aea48769018701acd2618b71911df2424296dbf
 EBUILD cups-1.6.1.ebuild 8264 SHA256 e2a5be9306f18d715b2d5ef1f28d82f6685eeab8fe3045b2e24e7f614291950a SHA512 ec37e543afb3873630b06122d422befbfa577abc4e4989e2a4f9a56219c73022b7a8f11254f676d00d7a7fd29a3be4ce37b9cc38fb36235fb1f2ea51488738b6 WHIRLPOOL 76fb0a2cf427349241266f6acf7a16009dee78de39804c17a3b9c7e89803b67de63df4f7d4555cdd667cf4dd7ef2657f91e935d4901ede26aad676240953fcb4
-EBUILD cups-9999.ebuild 8264 SHA256 be21965832f33f26d90fcd7e598a4a0d6bef7eb014c87ff3751d3ba86fa46226 SHA512 6e3d0932e9c18319139fa1230acab2c9933119c6fa6b21073dd987c5868a0d7660ed0e66346d1f9060cc070b11b50c9e9f4ad69101b77dbc1f3ac3c8e801e70a WHIRLPOOL 7b4a7b1193d4ec07ebae0e80f40bbae63cbb47a0579a3dcd8adaf23dbc89ae88be5509691b2549e9829f287670b452effbbb8119535687d834e23d2aead5ea33
-MISC ChangeLog 78033 SHA256 e3efb3505bcaf6f5fe5e6299d64166c38dcd83dc3f19d32545f71300105d2551 SHA512 6995e0e0f6b4bc8fb3a582abe16c0d1bac7e443fae3318c90a4e6c1994f7b5a4d32368b56fcf0b43b5389a679c0177017d427f1266be5a1c96735ca8e26f085a WHIRLPOOL b76a8b762ea5912b79c0b261c324d6f2fc1c3e77b650dbab699712830cbd934ed5429e7a812729165367029fb26477a4640f28ae0a1cf62e987c0877607286db
+EBUILD cups-9999.ebuild 8271 SHA256 48fa49652a11c5efab48c7aac43b5ca3897e0056cdfc1f211afca5e693fc872c SHA512 c6aedaf37c30164bfcb1abc0943748e94060a6389d9c06a69590ff8e746303536304d74ba3b758ae5bfc25f9fd6f641ae075191210fcbd925efb44d88962a2f5 WHIRLPOOL 729ef5e4a9bafc68f4af810be0f1fb697946e7aecfc3eec947188702f95fc1665e2e40827bd99b97c67dcc6243be4997825c6d20997b1d056a024e7cc9a94414
+MISC ChangeLog 78136 SHA256 a682cc7b656194b096e87d41073c11342caa855d80c3921ec2f4130ab5d1f1ba SHA512 0d87ad78a915bc432e634f773dff256ecd9b60c9695d995518536531f425e34528e557d69f41a8ff4e9c0ca0eb6a8d6df50c2246fb3164e6ad07dc7f8850f95f WHIRLPOOL 2b7d5e16372f271735a8dc6e77c0bea050e64560e8a3e372d97049598cc606779c412c8ab0dd23027c2a1d4a6764a02668f4e06b1e1889944388dfe0fc7a60ba
 MISC metadata.xml 778 SHA256 26a8d1221a4334579f98705c38f3e3a882c223df86181dcf7968eac2118188b8 SHA512 717b6c3d940b2de149a68bb1c66175cd6fac04e21fcf581d6f1dd248c1bc5ee8fb98ec26a1fa2fca94e8fcb33f131c6635d40a6954721020a989dc260e8b8fbc WHIRLPOOL 057426e3c3f1e7e5a6bb124e0af0d804e15f6bbf17f7b278ef90d773f997beed6c6376bcc9603ac4c67f75675a33bc1fb7a02bb89f7a1ed69634a5d7bf9befbb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQTLjiAAoJEEb+UGWnxTyHBbMQAJhTM0wbVCvBytFWmLBABRk4
-X7NXI6L2cNaxPvTkn0PtAbK+OvMLs46E3fKLM0v0iQTJOWqWmc0dEXA3CWmMtB6P
-9vpTPr5KHpKRzPIcTqfxy+W2tNAGF6aCkH29tLxJ12nNB87NdQLkg5Ib81fFOLvi
-OcxhKwJSl21i1RYv3HQBVDbZYbe8eXcEErV3fS8RuKRFkSPj+YUCt3JCwRJUgfBk
-+t5Zu03+PjmAs4Es01aGsvY48986TqfNdbmOb1J/3uYBAcyiT7cNK+Z4g11XOvpY
-6ulmmWVwbGhF+KM/XTaBv3F2PdRCrj6ouW+aXOmbylOLx8uI13V83xAxE3tM3VLe
-4KjegKRJ32PCt55WdekLOYyb7JzEfk/Gniuh3VjGhEDZFlLJ8lhRNanDj7inwQC0
-qkChqQajvUmm9vqmI+4tB5SdGrRuWLbQgxbcWs4qj/5oMi06cgnnCZ+/BdU+rFls
-9WWtx55+1MVGeu8p+gDDkBOru0fhc35mQQi0osT5bpM84oCwbkwQLp3Bm6LVwcy8
-S1O534DUlTz7wVUSJEumYinYG4SIhf8zvP7e/odDLpZb7u92rByqXMGXdWJdXF8e
-nfpkFzCnJqFMBA0YayEA4XiIFaJCZR1N5Hy8F6Vh2Crgldiknk55SfMgIpB95hbX
-fcG+rmg+4P4lktsQO4F5
-=HUTk
+iEYEAREIAAYFAlBcNq0ACgkQl5yvQNBFVTWvyQCfe4dXfSfSRdmrzaeNjj8/pfM6
+bkwAmgMESlKf54Vx+7TAzhLrn3KCRw1U
+=X1N8
 -----END PGP SIGNATURE-----
