@@ -1,6 +1,10 @@
 # ChangeLog for games-arcade/frozen-bubble
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/frozen-bubble/ChangeLog,v 1.49 2012/05/04 04:22:27 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/frozen-bubble/ChangeLog,v 1.50 2012/09/21 13:18:42 tupone Exp $
+
+  21 Sep 2012; Tupone Alfredo <tupone@gentoo.org>
+  frozen-bubble-2.2.1_beta1.ebuild:
+  Fix build after games eclass changes. Bug #428654 by Diego
 
   04 May 2012; Jeff Horelick <jdhore@gentoo.org>
   frozen-bubble-2.2.1_beta1.ebuild:
